<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/baseline_add_photo_alternate_24"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_maps"
        android:icon="@drawable/baseline_location_on_24"
        android:title="@string/menu_maps"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/baseline_translate_24"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>